--- a/client/my-app/src/Components/Dialog/Dialog.module.css
+++ b/client/my-app/src/Components/Dialog/Dialog.module.css
@@ -7,6 +7,7 @@
     padding: 24px 51px 34px 52px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 .dialogTop{
     display: flex;
@@ -39,4 +40,14 @@
 }
 .button{
     margin-right: 46px;
+}
+.unSelectedDialog{
+    width: 300px;
+    height: 30px;
+    background-color: rgb(158, 154, 154);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    margin:auto;
 }
