--- a/client/my-app/src/Components/Users/Users.module.css
+++ b/client/my-app/src/Components/Users/Users.module.css
@@ -24,6 +24,7 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+    justify-content: space-between;
 }
 .groupItem:last-child{
     border-bottom: none;
